@@ -33,6 +33,7 @@ Date: ???
     - Swapped concrete and concrete brick title types
     - Reduced fuel value of carbon
     - Hid rocks and trees from deconstruction planner GUI
+    - Remote interface changes to help BNW
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
